# flask-api

./: README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/controllers/: brand_controller.py  manufacturer_controller.py
app/forms/: brand_form.py  manufacturer_form.py
app/models/: brand.py  manufacturer.py
app/routes/: admin_client.py  api.py
app/templates/: base.html  brands.html  manufacturers.html
config/: config.py
instance/: app.db
migrations/versions/: 1a19f58d123f_initial_migration.py
